--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 <body>
     <div id = "button-div"></div>
     <div id = "results-div"></div>
-    <div id = "input-div">
-        <
-    </div>
+    <form id="add-item">
+        <label for="item-input">Don't see your emotion?</label>
+        <br>
+        <input type="text" id="item-input">
+        <br>
+  
+        <!-- Button triggers new movie to be added -->
+        <input id="add-item" type="submit" value="Add feels">
+      </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/app.js"></script>
 </body>
