added on-click event to place value of button clicked into a variable

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class = "container">
     <div id = "button-div"></div>
-    <div id = "results-div"></div>
     <form id="add-item">
         <label for="item-input">Don't see your emotion?</label>
         <br>
@@ -17,6 +17,7 @@
         <!-- Button triggers new movie to be added -->
         <input id="add-item" type="submit" value="Add feels">
       </form>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/app.js"></script>
 </body>
