--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-    <div class = "container">
-    <div id = "button-div"></div>
+    <div id="button-div"></div>
     <form id="add-item">
         <label for="item-input">Don't see your emotion?</label>
         <br>
         <input type="text" id="item-input">
         <br>
-  
+
         <!-- Button triggers new movie to be added -->
         <input id="add-item" type="submit" value="Add feels">
-      </form>
-    </div>
+    </form>
+    <div class="resultsContainer"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/app.js"></script>
 </body>
+
 </html>
